# Apollo-Lite

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  generate_modules_proto.sh
cmake/: Dependencies.cmake  Examples.cmake  Perception.cmake  Python.cmake
cyber/: CMakeLists.txt
cyber/examples/proto/: examples.pb.cc  examples.pb.h
cyber/proto/: choreography_conf.pb.cc  choreography_conf.pb.h  classic_conf.pb.cc  classic_conf.pb.h  clock.pb.cc  clock.pb.h  component_conf.pb.cc  component_conf.pb.h  cyber_conf.pb.cc  cyber_conf.pb.h  dag_conf.pb.cc  dag_conf.pb.h  parameter.pb.cc  parameter.pb.h  perception.pb.cc  perception.pb.h  perf_conf.pb.cc  perf_conf.pb.h  proto_desc.pb.cc  proto_desc.pb.h  qos_profile.pb.cc  qos_profile.pb.h  record.pb.cc  record.pb.h  role_attributes.pb.cc  role_attributes.pb.h  run_mode_conf.pb.cc  run_mode_conf.pb.h  scheduler_conf.pb.cc  scheduler_conf.pb.h  topology_change.pb.cc  topology_change.pb.h  transport_conf.pb.cc  transport_conf.pb.h  unit_test.pb.cc  unit_test.pb.h
cyber/python/: CMakeLists.txt
cyber/python/cyber_py3/: test.py
cyber/python/internal/: CMakeLists.txt
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/common/proto/: error_code.pb.cc  error_code.pb.h  error_code.proto  geometry.pb.cc  geometry.pb.h  header.pb.cc  header.pb.h  pnc_point.pb.cc  pnc_point.pb.h
modules/drivers/: CMakeLists.txt
modules/drivers/proto/: sensor_image.pb.cc  sensor_image.pb.h
modules/map/: CMakeLists.txt
modules/map/proto/: map.pb.cc  map.pb.h  map_clear_area.pb.cc  map_clear_area.pb.h  map_crosswalk.pb.cc  map_crosswalk.pb.h  map_geometry.pb.cc  map_geometry.pb.h  map_id.pb.cc  map_id.pb.h  map_junction.pb.cc  map_junction.pb.h  map_lane.pb.cc  map_lane.pb.h  map_overlap.pb.cc  map_overlap.pb.h  map_parking_space.pb.cc  map_parking_space.pb.h  map_pnc_junction.pb.cc  map_pnc_junction.pb.h  map_road.pb.cc  map_road.pb.h  map_rsu.pb.cc  map_rsu.pb.h  map_signal.pb.cc  map_signal.pb.h  map_speed_bump.pb.cc  map_speed_bump.pb.h  map_speed_control.pb.cc  map_speed_control.pb.h  map_stop_sign.pb.cc  map_stop_sign.pb.h  map_yield_sign.pb.cc  map_yield_sign.pb.h
modules/perception/: CMakeLists.txt
modules/perception/base/: CMakeLists.txt
modules/perception/camera/app/: CMakeLists.txt  traffic_light_camera_perception.cc  traffic_light_camera_perception.h
modules/perception/camera/app/proto/: perception.pb.cc  perception.pb.h
modules/perception/camera/common/: camera_frame.h  data_provider.cc  undistortion_handler.cc
modules/perception/camera/common/proto/: object_template_meta_schema.pb.cc  object_template_meta_schema.pb.h
modules/perception/camera/lib/: CMakeLists.txt
modules/perception/camera/lib/traffic_light/: README_zh.md
modules/perception/camera/lib/traffic_light/detector/recognition/proto/: recognition.pb.cc  recognition.pb.h
modules/perception/camera/lib/traffic_light/proto/: detection.pb.cc  detection.pb.h
modules/perception/camera/lib/traffic_light/tracker/proto/: semantic.pb.cc  semantic.pb.h
modules/perception/lib/registerer/: registerer.h
modules/perception/onboard/: CMakeLists.txt
modules/perception/onboard/common_flags/: CMakeLists.txt
modules/perception/onboard/component/: trafficlights_perception_component.cc  trafficlights_perception_component.h
modules/perception/onboard/proto/: trafficlights_perception_component.pb.cc  trafficlights_perception_component.pb.h
modules/perception/proto/: perception_camera.pb.cc  perception_camera.pb.h  perception_camera.proto  perception_obstacle.pb.cc  perception_obstacle.pb.h  traffic_light_detection.pb.cc  traffic_light_detection.pb.h
modules/proto/: CMakeLists.txt  perception_camera.pb.cc  perception_camera.pb.h  perception_config_schema.pb.cc  perception_config_schema.pb.h  perception_obstacle.pb.cc  perception_obstacle.pb.h
modules/transform/proto/: static_transform_conf.pb.cc  static_transform_conf.pb.h  transform.pb.cc  transform.pb.h
